src/objects/Apttus__DocumentVersion__c.object
<CustomObject>
    <description>Represents a document version</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <description>External Id - Used for Data Migration</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the agreement associated with the document version</description>
        <inlineHelpText>ID of the agreement associated with the document version</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Document Versions</relationshipLabel>
        <relationshipName>DocumentVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the user who checked out this document version</description>
        <inlineHelpText>ID of the user who checked out this document version</inlineHelpText>
        <label>Checkout By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Version</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutDate__c</fullName>
        <description>Date when this document was checked out</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date when this document was checked out</inlineHelpText>
        <label>Checkout Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutVersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the checked out version detail</description>
        <inlineHelpText>ID of the checked out version detail</inlineHelpText>
        <label>Checkout Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Document Versions (Checkout)</relationshipLabel>
        <relationshipName>CheckoutVersionDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CustomObjectId__c</fullName>
        <description>ID of the custom object associated with the document version</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the custom object associated with the document version</inlineHelpText>
        <label>Custom Object Id (Deprecated)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentType__c</fullName>
        <description>Document type represents type of document in agreement life cycle</description>
        <inlineHelpText>Document type represents type of document in agreement life cycle</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acceptance Test Procedure</fullName>
                </value>
                <value>
                    <fullName>Agreement Document</fullName>
                </value>
                <value>
                    <fullName>Annexure</fullName>
                </value>
                <value>
                    <fullName>Business Continuity</fullName>
                </value>
                <value>
                    <fullName>Supporting Document</fullName>
                    <label>Contract Summary</label>
                </value>
                <value>
                    <fullName>Currency  Conversion</fullName>
                </value>
                <value>
                    <fullName>Data Processing Agreement</fullName>
                </value>
                <value>
                    <fullName>Executed Document</fullName>
                </value>
                <value>
                    <fullName>G4 Approval</fullName>
                </value>
                <value>
                    <fullName>G5 Approval</fullName>
                </value>
                <value>
                    <fullName>GDPR/Privacy</fullName>
                </value>
                <value>
                    <fullName>Guarantees (Bank) or Performance Bond or Financing</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Safety</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price list</fullName>
                </value>
                <value>
                    <fullName>Pricing / Commercial Condition</fullName>
                </value>
                <value>
                    <fullName>Project Plan</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Scope / Solution description/ Share of Responsibility</fullName>
                </value>
                <value>
                    <fullName>Security Requirement</fullName>
                </value>
                <value>
                    <fullName>Warranty/ Care Support Services- Scope and Service Levels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__IsTransient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient versions are created .</description>
        <inlineHelpText>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing.</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestReviewCycleStatus__c</fullName>
        <description>holds the status of the latest review cycle for this document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Review Cycle Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to latest version object</description>
        <inlineHelpText>Lookup to latest version object</inlineHelpText>
        <label>Latest Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Document Versions</relationshipLabel>
        <relationshipName>DocumentVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__LatestVersion__c</fullName>
        <description>Represents the most recent version of this document</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Represents the most recent version of this document</inlineHelpText>
        <label>Latest Version</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Notes__c</fullName>
        <description>The notes associated with the version</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__NumberOfVersions__c</fullName>
        <description>Indicates the number of detail versions associated with the version</description>
        <inlineHelpText>Indicates the number of detail versions associated with the version</inlineHelpText>
        <label>Number Of Versions</label>
        <summaryForeignKey>Apttus__DocumentVersionDetail__c.Apttus__DocumentVersionId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus__PendingReviews__c</fullName>
        <description>Pending Reviews Count</description>
        <inlineHelpText>Count of Review Cycles Pending.</inlineHelpText>
        <label>Pending Reviews</label>
        <summarizedField>Apttus__DocumentVersionDetail__c.Apttus__PendingReviews__c</summarizedField>
        <summaryForeignKey>Apttus__DocumentVersionDetail__c.Apttus__DocumentVersionId__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus__ReferenceId__c</fullName>
        <description>A unique external reference identifier</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>A unique external reference identifier</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ReviewStatus__c</fullName>
        <description>Review Status</description>
        <formula>HYPERLINK(&apos;/apex/Apttus__ParallelReviewCycle?id=&apos;+  Id  , Apttus__LatestReviewCycleStatus__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Review Status</inlineHelpText>
        <label>Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the template associated with the version</description>
        <inlineHelpText>ID of the template associated with the version</inlineHelpText>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Document Versions</relationshipLabel>
        <relationshipName>DocumentVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Title__c</fullName>
        <description>Title of the document</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Title of the document</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__View__c</fullName>
        <description>View latest version of the document</description>
        <formula>Apttus__LatestVersionId__r.Apttus__View__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>View latest version of the document</inlineHelpText>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Other_Document_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please specify the type of document if not listed in Document Type.</inlineHelpText>
        <label>Other Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_DecisionEnginesAPI__c</fullName>
        <description>Call DecisionEngines Web API</description>
        <formula>if( AND(ISPICKVAL(Apttus__DocumentType__c, &apos;Executed Document&apos;) || ISPICKVAL(Apttus__DocumentType__c, &apos;Agreement Document&apos;) || ISPICKVAL(Apttus__DocumentType__c, &apos;Other&apos;), not(Apttus__IsTransient__c), OR( ISNULL(DE_Status__c ),  ISBLANK(DE_Status__c ), DE_Status__c = &apos;Failed&apos; ) ) ,HYPERLINK(&quot;/apex/DE_DecisionEnginesAPI?id=&quot; + Id, &quot;Send to AI&quot;,&quot;_self&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Send Document to AI for Extraction of Clauses</inlineHelpText>
        <label>Send to AI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_REVIEW_LINK__c</fullName>
        <description>AI Review Link</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>AI Review Link</inlineHelpText>
        <label>AI REVIEW LINK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Reference_Id__c</fullName>
        <description>External Reference Id used by AI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AI Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_ReviewLink__c</fullName>
        <formula>if(OR( DE_Status__c = &quot;In Review&quot;, DE_Status__c = &quot;Completed&quot; ), HYPERLINK(&quot;/apex/de_DecisionEnginesPopUp?id=&quot; + Id&amp;&quot;&amp;docu=&quot;&amp;DE_REVIEW_LINK__c, &quot;AI Review&quot;,&quot;_self&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Status__c</fullName>
        <description>AI Status</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>AI Status</inlineHelpText>
        <label>AI Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Submitting_User_To_DE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>storing the user information who ever is submitting the document version to DE platform.</description>
        <label>Submitting User To DE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Version</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>